<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.direct2guests.d2g_tv.Activities.LauncherActivity">

    <RelativeLayout
        android:id="@+id/launcher_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_lg"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/userLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="84dp"
            android:layout_marginTop="46dp"
            android:src="@drawable/user_icon"
            android:visibility="visible"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/welcomeGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@+id/userLogo"
            android:text="@string/launcherWelcome"
            android:textColor="#fff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/dateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@+id/textClock"
            android:text="@string/launcherDate"
            android:textAlignment="viewEnd"
            android:textColor="#fff"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="54dp"
            android:textSize="30sp" />

        <RelativeLayout
            android:id="@+id/weatherL"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateTxt"
            android:layout_alignRight="@+id/textClock"
            android:gravity="right">

            <ImageView
                android:id="@+id/LweatherIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/LweatherTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/LweatherIcon"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/LweatherDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/LweatherTemp"
                android:textColor="#fff"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/welcomeGuest"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/hotelLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="false"
                android:layout_centerInParent="false"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:adjustViewBounds="true" />

            <HorizontalScrollView
                android:id="@+id/LauncherScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-18dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_toEndOf="@+id/hotelLogo"
                android:persistentDrawingCache="all">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:alwaysDrawnWithCache="true"
                    android:animateLayoutChanges="false"
                    android:animationCache="true"
                    android:orientation="horizontal"
                    android:paddingStart="0dp"
                    android:paddingTop="60dp"
                    android:persistentDrawingCache="all">

                    <FrameLayout
                        android:id="@+id/watchtvframe"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginLeft="55dp"
                        android:layout_marginTop="55dp"
                        android:layout_marginRight="40dp"
                        android:alwaysDrawnWithCache="true"
                        android:animationCache="true"
                        android:background="@drawable/background_round"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:elevation="30dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:onClick="watchtv_activity"
                        android:persistentDrawingCache="all"
                        android:translationZ="1dp">

                        <ImageView
                            android:id="@+id/tv_icon"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="70dp"
                            android:drawingCacheQuality="auto"
                            android:src="@drawable/tv_icon" />

                        <TextView
                            android:id="@+id/watchtv_launcher_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="0dp"
                            android:layout_marginBottom="0dp"
                            android:padding="17dp"
                            android:text="@string/launcherWatchTV"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/hotelservicesframe"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="55dp"
                        android:layout_marginRight="55dp"
                        android:alwaysDrawnWithCache="true"
                        android:animationCache="true"
                        android:background="@drawable/background_round"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:onClick="hotelservices_activity"
                        android:persistentDrawingCache="all">

                        <ImageView
                            android:id="@+id/about_icon"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="70dp"
                            android:src="@drawable/about_icon" />

                        <TextView
                            android:id="@+id/hotelservices_launcher_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="0dp"
                            android:layout_marginBottom="0dp"
                            android:padding="17dp"
                            android:text="@string/launcherHotelServices"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </FrameLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
